Refactor api - Move alias check for create and delete from controllers into UrlAliasManager - Add more titles and operationIds to openapi.yaml for nicer class/method names - Add exception handler
